--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ plugins {
     id 'idea'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'cz.cvut.fel.Main'
+    }
+}
+
 // https://docs.gradle.org/current/userguide/declaring_repositories.html
 repositories {
     mavenCentral()
